Allow duplicates in CachedRefDatabase.exactRef()
The CachedRefDatabase.exactRef() may receive duplicates in the list
of refs which should be de-duplicated in the response's map.

Change-Id: I20d35186e6bb421739b04901c9375e19911dc122